css/styles.css
/* ... */
@font-face {
    font-family: 'rahayuregular';
    src: url('../fonts/rahayu-webfont.woff2') format('woff2'),
         url('../fonts/rahayu-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
:root {
    --dark-blue: #348aa7;
    --medium-green: #bce784;
    --off-white: #f7f7f7;
    --charcoal: #2a2d34;
    --rubik: 1.6rem/1.5 "Rubik", sans-serif;
    --borders: 1px solid black;
    --pink: #ae677df9;
    --brown: #7d46226a;
} 

/* typography */
body {
    font-size: 1.25rem;
    line-height: 1.5;
    font-family: Baskervville;
}

span {
    font-family: "Baskervville", serif;
    font-weight: 400;
    font-style: italic;
}

h2 {
    font-size: 8rem;
    margin-bottom: 3rem;
}

h3 {
    font-size: 2.5rem;
    margin-bottom: 0.5rem;
}

p {
    margin-bottom: 1rem;
}

nav a {
    font-style: italic;
    font-size: 1.5rem;
}

nav a:hover {
    text-decoration: underline;
}

.sr-only {
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow:hidden;
}

.flex-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.relative {
    position: relative;
}

.absolute {
    position: absolute;
}

.round-button {
    background-color: black;
    color: white;
    border-radius: 50%;
    display: block;
    width: 9rem;
    height: 9rem;
    padding: 0.4rem;
    z-index: 50;
}
.round-button span {
    border: 1px solid white;
    display: block;
    border-radius: 50%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* ******************* header ********************************* */
header {
    background-color: white;
}

.site-id {
    margin: 0 auto;
    width: 35%;
    display: flex;
    align-items: center;
}

.logo {  
    text-align: center;
    color: var(--charcoal);
    text-decoration: none;
    padding: 1rem 1rem 0.5rem 1rem;
}
.logo span {
    font-family: 'rahayuregular';
    font-size: 1.5rem;
}

.logo img:last-of-type {
    display: none;
}

.toggle-btn {
    position: absolute;
    right: 0;
    padding: 1rem;
    width: 5rem;
    display: block;
}

header nav {
    position: absolute;
    top: 5.5rem; /* the height of the closed header */
    left: 0;
    width: 100vw;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.7s ease-in-out;
    background-color: white;
    }

.show-nav {
    max-height: 100vh;
    z-index: 50;
    }

nav ul li a {
    display: block;
    padding: 1rem;
    color: black;
    z-index: 100;
}
/* **************** banner ************* */

.banner {
    position: relative;
}

.banner p {
    position: absolute;
    top: 7%;
    background-color: hwb(40 47% 32% / 0.93);
    color: #fbf9fb;
    line-height: 1.15;
    padding: 1rem;
    margin-right: 1rem;
}
.banner a {
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 0.7rem;
    color: rgba(128, 128, 128, 0.528);
    font-style: italic;
}
.banner a:hover {
    color: rgba(128, 128, 128, 0.703);
    text-decoration: underline wavy;
}
.banner img {
    display: block;
}

/* main layout */

.proposal > div {
    color: #030303;
    /* background-color: hwb(41 47% 32% / 0.902); */
    line-height: 1.25;
    padding: 3.75rem 7rem;
    margin: 1rem;
}

.proposal h3 {
    font-style: italic;
    margin-bottom: 1rem;
}
.proposal img {
    /* padding-right: 9rem; */
    padding-right: 6rem;
}

.proposal .round-button {
    position: absolute;
    right: 0;
}
.expenses {
    text-align: center;
    padding: 4rem 2rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.expenses div {
    margin-bottom: 1rem;
}
.details > div {
    align-items: end;
    padding: 1rem;
}
.details span {
    font-size: 1.75rem;
    padding-right: 0.5rem;
}

.details p {
    text-align: right;
}
.details .copy {
    padding-left: 0.5rem;
}
.details p:nth-child(2) {
    padding-left: 2.5rem;
}
.details p:last-child {
    padding-left: 5rem;
}

.details .overlap {
    background-color: #d1a78f;
    margin-left: 2.5rem;
    margin-bottom: 8rem;
    margin-right: 4rem;
}
.details .overlap img {
    transform: translate(3rem, 2rem);
    outline: 1px solid black;
    outline-offset: -0.75rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    padding-left: 1rem;
}
.details h3 {
    margin-top: -5rem;
    padding-left: 2.5rem;
    display: flex;
    align-items: top;
    text-align: left;
    width: 100%;
}

.details {
    margin-bottom: 2rem;
}

.stories {
    padding: 2rem;
} 

.stories > div {
    border: 1px solid black;
}

.stories h3 {
    /* padding: 1rem; */
    padding-bottom: 0;
}
.stories > div > div {
    padding: 1rem;
}
.stories img {
    padding: 0.25rem;
}

.stories a {
    position: absolute;
    right: 1rem;
    bottom: -32%;
}

.stories {
    margin-bottom: 5rem;
}

.spill {
    /* background-image: url("../img/paper-background-sm.webp"); */
    margin-bottom: 3rem;
}
.spill h3 {
    transform: rotate(2deg);
    text-align: center;
}

.spill p {
    /* background-color: rgba(108, 74, 34, 0.7); */
    /* border-radius: 3rem; */
    padding: 3rem 6rem;
    margin-top: -2rem;
}

.spill img {
    width: 50%;
    transform: rotate(-2deg);
    border: var(--borders);
    padding: 0.25rem;
}
.spill a {
    text-align: center;
    position: absolute;
    right: 12%;
    bottom: -65%;

}
.photo-arrange .brown-bg {
    background-color: #7d46226a;
    height: 70%;
    width: 100%;
    position: absolute;
    z-index: -1;
}

.questions > div {
    background-color: #ae677df9;
    flex-direction: row;
    gap: 1rem;
    padding: 1rem;
}
.questions img {
    background-color: var(--pink);
    margin-bottom: -0.6rem;
    /* border: var(--borders); */
}
.questions > div > div {
    width: 75%;
}

.rocky-mountain-stamp {
    float: left;
    width: 12rem;
    margin-right: 1rem;
    border-radius: 50%;
    shape-outside: margin-box;
}

.features {
    padding: 2rem;
    margin-bottom: 2rem;
}
/* ... */

